force-app/main/default/objects/Credit_Card__c/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <label>Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>