force-app/main/default/objects/Credit_Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>