force-app/main/default/objects/Credit_Card__c/fields/Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due__c</fullName>
    <label>Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>