force-app/main/default/objects/Credit_Card__c/fields/Rewards_Points__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Points__c</fullName>
    <label>Rewards Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>