force-app/main/default/objects/Credit_Card__c/fields/Transaction_History__c.field-meta.xml
<CustomField>
    <fullName>Transaction_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction History</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>